// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button default view 1`] = `
<div
  className="sc-EHOje flvsPL"
>
  <div>
    <button
      className="sc-iwsKbI eBGWQb sc-dnqmqq juvgxY"
      disabled={false}
      is={null}
      onClick={[Function]}
    >
      Hello Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Button disabled 1`] = `
<div
  className="sc-EHOje flvsPL"
>
  <div>
    <button
      className="sc-iwsKbI eBGWQb sc-dnqmqq juvgxY"
      disabled={true}
      is={null}
      onClick={[Function]}
    >
      Hello Button
    </button>
  </div>
</div>
`;

exports[`Storyshots FeedPanel with some props 1`] = `
<div
  className="sc-EHOje flvsPL"
>
  <div>
    <div>
      <button
        className="sc-iwsKbI eBGWQb sc-dnqmqq juvgxY"
        is={null}
      >
        Label
      </button>
      test storybookx x
    </div>
  </div>
</div>
`;

exports[`Storyshots FeedPanel without props 1`] = `
<div
  className="sc-EHOje flvsPL"
>
  <div>
    <div>
      <button
        className="sc-iwsKbI eBGWQb sc-dnqmqq juvgxY"
        is={null}
      >
        Label
      </button>
      test storybookx x
    </div>
  </div>
</div>
`;
